# vea

./: .env.example  .gitignore  README.md  pyproject.toml
daily_brief/: __main__.py  _utils.py  auth.py  cli.py
daily_brief/loaders/: extras.py  gcal.py  gmail.py  journals.py  slack.py  todoist.py
daily_brief/utils/: summarization.py  vea_prompt.txt
tests/: conftest.py  test_check_for_tasks_filtering.py  test_context_filter.py  test_daily_filtering.py  test_date_utils.py  test_embedding_utils.py  test_embeddings.py  test_filtering.py  test_gcal.py  test_journal_outliner.py  test_journals.md  test_llm_logging.py  test_llm_utils.py  test_prepare_event.py  test_prepare_event_filtering.py  test_summarization_embeddings.py  test_weekly_compression.py
vea/: __main__.py  auth.py  cli.py  embeddings.py
vea/assets/: pdf.css
vea/cli/: __init__.py  auth.py  check_for_tasks.py  daily.py  indexing.py  prepare_event.py  utils.py  weekly.py
vea/loaders/: extras.py  gcal.py  gmail.py  journals.py  slack.py  todoist.py
vea/prompts/: check-for-tasks-default.prompt  daily-default.prompt  default.prompt  prepare-event.prompt  weekly-default.prompt
vea/utils/: __init__.py  context_filter.py  date_utils.py  embedding_utils.py  embeddings.py  error_utils.py  event_utils.py  filtering.py  generic_utils.py  llm_utils.py  markdown_utils.py  output_utils.py  pdf_utils.py  slack_utils.py  summarization.py  text_utils.py
