[project]
name = "daily-brief"
version = "0.1.0"
description = "A CLI tool that generates a daily briefing from your calendar, email, journal, and task list."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "openai>=1.14",
  "google-auth>=2.29",
  "google-api-python-client>=2.125",
  "google-auth-oauthlib>=1.0.0",
  "todoist-api-python>=2.0",
  "python-dotenv>=0.21",
  "typer>=0.6.1",
  "slack-sdk>=3.19",
  "rich>=13.0",
  "pytz>=2022.1",
  "anthropic>=0.1.3",
  "google-generativeai>=0.8.5",
]

[project.scripts]
daily-brief = "daily_brief.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
